--- a/requirements.txt
+++ b/requirements.txt
@@ -1,80 +1,92 @@
-argon2-cffi @ file:///C:/ci/argon2-cffi_1613037869401/work
-async-generator @ file:///home/ktietz/src/ci/async_generator_1611927993394/work
-attrs @ file:///tmp/build/80754af9/attrs_1620827162558/work
-backcall @ file:///home/ktietz/src/ci/backcall_1611930011877/work
-bleach @ file:///tmp/build/80754af9/bleach_1612211392645/work
-Bottleneck @ file:///C:/ci/bottleneck_1607557040328/work
+argon2-cffi==20.1.0
+async-generator==1.10
+attrs==21.2.0
+backcall==0.2.0
+bleach==3.3.0
+Bottleneck==1.3.2
 certifi==2021.5.30
-cffi @ file:///C:/ci/cffi_1613247431367/work
-colorama @ file:///tmp/build/80754af9/colorama_1607707115595/work
+cffi==1.14.5
+chardet==4.0.0
+click==8.0.1
+colorama==0.4.4
 cycler==0.10.0
 daal4py==2021.2.2
-decorator @ file:///tmp/build/80754af9/decorator_1621259047763/work
-defusedxml @ file:///tmp/build/80754af9/defusedxml_1615228127516/work
+decorator==5.0.9
+defusedxml==0.7.1
 entrypoints==0.3
-importlib-metadata @ file:///C:/ci/importlib-metadata_1617877477759/work
-ipykernel @ file:///C:/ci/ipykernel_1607454116140/work/dist/ipykernel-5.3.4-py3-none-any.whl
-ipython @ file:///C:/ci/ipython_1617120911285/work
-ipython-genutils @ file:///tmp/build/80754af9/ipython_genutils_1606773439826/work
-ipywidgets @ file:///tmp/build/80754af9/ipywidgets_1610481889018/work
-jedi @ file:///C:/ci/jedi_1606932640618/work
-Jinja2 @ file:///tmp/build/80754af9/jinja2_1624781299557/work
-joblib @ file:///tmp/build/80754af9/joblib_1613502643832/work
-jsonschema @ file:///tmp/build/80754af9/jsonschema_1602607155483/work
-jupyter @ file:///C:/ci/jupyter_1607685287094/work
-jupyter-client @ file:///tmp/build/80754af9/jupyter_client_1616770841739/work
-jupyter-console @ file:///tmp/build/80754af9/jupyter_console_1616615302928/work
-jupyter-core @ file:///C:/ci/jupyter_core_1612213515523/work
-jupyterlab-pygments @ file:///tmp/build/80754af9/jupyterlab_pygments_1601490720602/work
-jupyterlab-widgets @ file:///tmp/build/80754af9/jupyterlab_widgets_1609884341231/work
-kiwisolver @ file:///C:/ci/kiwisolver_1612282555033/work
-MarkupSafe @ file:///C:/ci/markupsafe_1621528502553/work
-matplotlib @ file:///C:/ci/matplotlib-suite_1613408055530/work
-mistune @ file:///C:/ci/mistune_1607359457024/work
+Flask==2.0.1
+idna==2.10
+importlib-metadata==3.10.0
+ipykernel==5.3.4
+ipython==7.22.0
+ipython-genutils==0.2.0
+ipywidgets==7.6.3
+itsdangerous==2.0.1
+jedi==0.17.2
+Jinja2==3.0.1
+joblib==1.0.1
+jsonify==0.5
+jsonschema==3.2.0
+jupyter==1.0.0
+jupyter-client==6.1.12
+jupyter-console==6.4.0
+jupyter-core==4.7.1
+jupyterlab-pygments==0.1.2
+jupyterlab-widgets==1.0.0
+kiwisolver==1.3.1
+MarkupSafe==2.0.1
+matplotlib==3.3.4
+mistune==0.8.4
 mkl-fft==1.3.0
-mkl-random @ file:///C:/ci/mkl_random_1618854182866/work
+mkl-random==1.2.1
 mkl-service==2.3.0
-nbclient @ file:///tmp/build/80754af9/nbclient_1614364831625/work
-nbconvert @ file:///C:/ci/nbconvert_1624479160025/work
-nbformat @ file:///tmp/build/80754af9/nbformat_1617383369282/work
-nest-asyncio @ file:///tmp/build/80754af9/nest-asyncio_1613680548246/work
-notebook @ file:///C:/ci/notebook_1621625801656/work
-numexpr @ file:///C:/ci/numexpr_1618856728739/work
-numpy @ file:///C:/ci/numpy_and_numpy_base_1620831398996/work
+nbclient==0.5.3
+nbconvert==6.1.0
+nbformat==5.1.3
+nest-asyncio==1.5.1
+notebook==6.4.0
+numexpr==2.7.3
+numpy==1.20.2
 olefile==0.46
-packaging @ file:///tmp/build/80754af9/packaging_1611952188834/work
-pandas @ file:///C:/ci/pandas_1624465767060/work
-pandocfilters @ file:///C:/ci/pandocfilters_1605114832805/work
+packaging==20.9
+pandas==1.2.5
+pandocfilters==1.4.3
 parso==0.7.0
-pickleshare @ file:///tmp/build/80754af9/pickleshare_1606932040724/work
-Pillow @ file:///C:/ci/pillow_1617386320391/work
-prometheus-client @ file:///tmp/build/80754af9/prometheus_client_1623189609245/work
-prompt-toolkit @ file:///tmp/build/80754af9/prompt-toolkit_1616415428029/work
-pycparser @ file:///tmp/build/80754af9/pycparser_1594388511720/work
-Pygments @ file:///tmp/build/80754af9/pygments_1621606182707/work
-pyparsing @ file:///home/linux1/recipes/ci/pyparsing_1610983426697/work
-pyrsistent @ file:///C:/ci/pyrsistent_1625052426389/work
-python-dateutil @ file:///home/ktietz/src/ci/python-dateutil_1611928101742/work
-pytz @ file:///tmp/build/80754af9/pytz_1612215392582/work
+pickleshare==0.7.5
+Pillow==8.2.0
+pip==21.1.3
+prometheus-client==0.11.0
+prompt-toolkit==3.0.17
+pycparser==2.20
+Pygments==2.9.0
+pyparsing==2.4.7
+pyrsistent==0.18.0
+python-dateutil==2.8.1
+pytz==2021.1
 pywin32==228
-pywinpty @ file:///C:/ci/pywinpty_1607419945780/work
+pywinpty==0.5.7
 pyzmq==20.0.0
-qtconsole @ file:///tmp/build/80754af9/qtconsole_1623278325812/work
+qtconsole==5.1.0
 QtPy==1.9.0
-scikit-learn @ file:///C:/ci/scikit-learn_1622739499047/work
+requests==2.25.1
+scikit-learn==0.24.2
 scikit-learn-intelex==2021.20210504.131229
-scipy @ file:///C:/ci/scipy_1618856124610/work
-seaborn @ file:///tmp/build/80754af9/seaborn_1608578541026/work
-Send2Trash @ file:///tmp/build/80754af9/send2trash_1607525499227/work
+scipy==1.6.2
+seaborn==0.11.1
+Send2Trash==1.5.0
+setuptools==52.0.0.post20210125
 sip==4.19.13
-six @ file:///tmp/build/80754af9/six_1623709665295/work
+six==1.16.0
 terminado==0.9.4
-testpath @ file:///tmp/build/80754af9/testpath_1624638946665/work
-threadpoolctl @ file:///tmp/tmp9twdgx9k/threadpoolctl-2.1.0-py3-none-any.whl
-tornado @ file:///C:/ci/tornado_1606924294691/work
-traitlets @ file:///home/ktietz/src/ci/traitlets_1611929699868/work
-wcwidth @ file:///tmp/build/80754af9/wcwidth_1593447189090/work
+testpath==0.5.0
+threadpoolctl==2.1.0
+tornado==6.1
+traitlets==5.0.5
+urllib3==1.26.6
+wcwidth==0.2.5
 webencodings==0.5.1
-widgetsnbextension @ file:///C:/ci/widgetsnbextension_1607531582688/work
+Werkzeug==2.0.1
+wheel==0.36.2
+widgetsnbextension==3.5.1
 wincertstore==0.2
-zipp @ file:///tmp/build/80754af9/zipp_1615904174917/work
+zipp==3.4.1
